# freebsd-src

./: .arcconfig  .arclint  .cirrus.yml  .clang-format  .clangd  .clean_build_epoch  .cvsignore  .depend  .editorconfig  .git-blame-ignore-revs  .git_allowed_signers  .git_allowed_signers.asc  .gitattributes  .gitignore  .gitmodules  .mailmap  .mergify_pause_paths  .skipped-commit-ids  .svnignore  .travis.yml  75-yes-terminus.conf  ANIMATION_SYSTEM.md  ANNOUNCE  AUTHORS  Android.mk  Atffile  BUGS  Build  Buildfile  Buildfile.dirdep  CHANGELOG  CHANGELOG.md  CHANGES  CMakeLists.txt  COMMITTERS  COMMIT_STATUS_REPORT.md  COMPILE.2.5  CONTRIB.386BSD  CONTRIB.FreeBSD  CONTRIBUTING  (+1474 more)
Ada95/: Makefile.in  README  TODO  aclocal.m4  configure  configure.in  make-tar.sh  mk-1st.awk  mk-pkg.awk
Ada95/doc/: Makefile.in
Ada95/include/: MKncurses_def.sh  Makefile.in  ncurses_cfg.hin  ncurses_defs
Ada95/package/: AdaCurses-doc.spec  AdaCurses.spec
Ada95/samples/: Makefile.in  README  explain.txt  ncurses.adb  ncurses2-acs_and_scroll.adb  ncurses2-acs_and_scroll.ads  ncurses2-acs_display.adb  ncurses2-acs_display.ads  ncurses2-attr_test.adb  ncurses2-m.adb  (+77 more)
adjtimed/: Makefile.am  Makefile.in
amd/: Makefile.am  Makefile.in  amd.8  amd.c  amq_subr.c  autil.c  get_args.c  map.c  nfs_subr.c  ops_cdfs.c  ops_udf.c  readdir.c
arlib/: arlib.c  configure.in
cat/: CMakeLists.txt  bsdcat.1  bsdcat.c  bsdcat.h  bsdcat_platform.h  cmdline.c
clockstuff/: Makefile.am  Makefile.in  propdelay.c
cpio/: CMakeLists.txt  bsdcpio.1  cmdline.c  config_freebsd.h  cpio.c  cpio.h  cpio_platform.h  cpio_windows.c  cpio_windows.h
doc/: API-header.xml  API.xml  CK_COHORT_INIT  CK_COHORT_INSTANCE  CK_COHORT_PROTOTYPE  CK_COHORT_TRYLOCK  CK_HS_HASH  CK_RHS_HASH  CK_RWCOHORT_INIT  CK_RWCOHORT_INSTANCE  CK_RWCOHORT_READ_LOCK  CK_RWCOHORT_READ_UNLOCK  Changelog  CodingStyle  DLT_ALLOCATE_HOWTO.md  Makefile  Makefile.am  Makefile.am.inc  Makefile.in  NTMakefile  README  README.Win32.md  README.linux  README.septel  README.windows.md  TODO  ack.texi  am-utils.dvi  am-utils.info  am-utils.info-1  am-utils.info-2  am-utils.ps  api.rst  atf-test-case.4  build_this.rst  ck_array_initialized  ck_array_length  ck_array_remove  ck_bitmap_bts  ck_bitmap_init  (+157 more)
examples/: CMakeLists.txt  Kyuafile.top  Makefile  Makefile.in  README.adoc  bwt.c  config.h.in  configure  configure.ac  crash_course.c  cred.c  element_declarations.c  elements.c  info.c  ldns-chaos.1  ldns-compare-zones.1  ldns-compare-zones.c  ldns-dane.1.in  ldns-dane.c  ldns-dpa.1  ldns-dpa.c  ldns-gen-zone.1  ldns-gen-zone.c  ldns-key2ds.1  ldns-key2ds.c  ldns-keyfetcher.1  ldns-keyfetcher.c  ldns-keygen.1  ldns-keygen.c  ldns-mx.1  ldns-mx.c  ldns-notify.1  ldns-notify.c  ldns-nsec3-hash.1  ldns-nsec3-hash.c  ldns-read-zone.1  ldns-read-zone.c  ldns-resolver.1  ldns-resolver.c  ldns-revoke.1  (+36 more)
fixmount/: Makefile.am  Makefile.in  fixmount.8
fuzzer/: alloc-inject.c  meson.build  parser-fuzzer.c
gold/: Makefile.am  Makefile.in  README  aclocal.m4  archive.cc  archive.h  common.cc  common.h  config.in  configure  configure.ac  defstd.cc  defstd.h  dirsearch.cc  dirsearch.h  dynobj.cc  dynobj.h  fileread.cc  fileread.h  gold-threads.cc  gold-threads.h  gold.cc  gold.h  i386.cc  layout.cc  layout.h  main.cc  merge.cc  merge.h  object.cc  object.h  options.cc  options.h  output.cc  output.h  readsyms.cc  readsyms.h  reloc-types.h  reloc.cc  reloc.h  (+16 more)
gprof/: .gdbinit  ChangeLog  ChangeLog-2004  ChangeLog-2005  ChangeLog-9203  Makefile.am  Makefile.in  README  TEST  TODO  acinclude.m4  aclocal.m4  alpha.c  basic_blocks.c  basic_blocks.h  bb_exit_func.c  bbconv.pl  bsd_callg_bl.c  call_graph.c  call_graph.h  cg_arcs.c  cg_arcs.h  cg_dfn.c  cg_dfn.h  cg_print.c  cg_print.h  config.texi  configure  configure.in  corefile.c  corefile.h  flat_bl.c  flat_bl.m  fsf_callg_bl.c  fsf_callg_bl.m  gconfig.in  gen-c-prog.awk  gmon.h  gmon_io.c  gmon_io.h  (+24 more)
hlfsd/: Makefile.am  Makefile.in  hlfsd.8
include/: Buildfile  Buildfile.dep  Buildfile.dirdep  CMakeLists.txt  Caps  Caps.aix4  Caps.hpux11  Caps.keys  Caps.osf1r5  Caps.uwin  ChangeLog-9103  MKkey_defs.sh  MKterm.h.awk.in  Makefile  Makefile.am  Makefile.depend  Makefile.in  Makefile.inc  NTMakefile  _ctype.h  _xlocale_ctype.h  a.out.h  acapps.h  accommon.h  acconfig.h  acdebug.h  acdisasm.h  acglobal.h  achware.h  acinterp.h  aclocal.h  acmacros.h  acnames.h  acnamesp.h  acobject.h  acoutput.h  acparser.h  acpi.h  acpiosxf.h  acpixf.h  (+253 more)
lib/: Buildfile  Buildfile.dirdep  Buildfile.inc  CMakeLists.txt  Config.in  GNUMakefile  GNUmakefile  LLVMBuild.txt  Makefile  Makefile.am  Makefile.in  Makefile.inc  NTMakefile  addicmp.c  addipopt.c  addkeep.c  argp-fmtstream.c  argp-help.c  argp.h  asn1.c  barbox.c  bcopywrap.c  binprint.c  bl.c  blocklist.c  brlock.c  bsddialog.3  bsddialog.h  bsddialog_progressview.h  bsddialog_theme.h  bsnmpagent.3  buildopts.c  bust_spinlocks.c  checkrev.c  cmdline.c  count4bits.c  count6bits.c  crc32.c  ctype.c  datebox.c  (+127 more)
libamu/: Makefile.am  Makefile.in  clnt_sperrno.c  memcmp.c  strcasecmp.c  strlcat.c  strlcpy.c  strstr.c  ualarm.c  xdr_func.c
libedit/: Makefile.am  Makefile.in  chared.c  chared.h  common.c  editline.3  editrc.5  el.c  el.h  emacs.c  filecomplete.c  filecomplete.h  hist.c  hist.h  histedit.h  history.c  key.c  key.h  makelist.in  map.c  map.h  parse.c  parse.h  prompt.c  prompt.h  read.c  read.h  readline.c  refresh.c  refresh.h  search.c  search.h  sig.c  sig.h  sys.h  term.c  term.h  tokenizer.c  tty.c  tty.h  (+1 more)
libntp/: Makefile.am  Makefile.in  a_md5encrypt.c  atoint.c  atolfp.c  atouint.c  audio.c  authkeys.c  authreadkeys.c  authusekey.c  buftvtots.c  caljulian.c  caltontp.c  calyearstart.c  clocktypes.c  decodenetnum.c  emalloc.c  findconfig.c  hextoint.c  hextolfp.c  humandate.c  icom.c  inttoa.c  iosignal.c  lib_strbuf.c  log.h  machines.c  mktime.c  modetoa.c  mstolfp.c  msyslog.c  netof.c  ntp_calendar.c  ntp_crypto_rnd.c  ntp_intres.c  ntp_libopts.c  ntp_lineedit.c  ntp_random.c  ntp_rfc2553.c  numtoa.c  (+16 more)
mk-amd-map/: Makefile.am  Makefile.in  mk-amd-map.8
(+208171 files in other folders)
